--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
         <li><a href="contact.html">Contact</a></li>
         <li><a href="login.html">Login</a></li>
     </ul>
+     <div class="menu-icon" id="menu-icon"><i class="bx bx-menu"></i></div>
 </nav>
-         <div class="menu-icon" id="menu-icon"><i class="bx bx-menu"></i></div>
+        
     </header>
     <!--Home Section-->
     <section class="home">
@@ -185,6 +186,6 @@ Spiritual Heart of Puri...
   <p>&copy; 2025 BlogTube. All rights reserved.</p>
 </footer>
 <!--Javascript-->
-<script src="js/script.js"></script>
+<script src="js/script.js" defer></script>
 </body>
 </html>
