--- a/category.html
+++ b/category.html
@@ -39,8 +39,9 @@
         <li><a href="contact.html">Contact</a></li>
         <li><a href="login.html">Login</a></li>
     </ul>
+    <div class="menu-icon" id="menu-icon"><i class="bx bx-menu"></i></div>
 </nav>
-         <div class="menu-icon" id="menu-icon"><i class="bx bx-menu"></i></div>
+         
     </header>
     <!--Category Section-->
     <section class="category-title">
@@ -179,6 +180,7 @@ Spiritual Heart of Puri...
 
   <p>&copy; 2025 BlogTube. All rights reserved.</p>
 </footer>
-<script src="js/script.js"></script>
+<!--Javascript-->
+<script src="js/script.js" defer></script>
 </body>
 </html>
