--- a/login.html
+++ b/login.html
@@ -40,8 +40,9 @@
         <li><a href="contact.html">Contact</a></li>
         <li><a href="login.html" class="active">Login</a></li>
     </ul>
+    <div class="menu-icon" id="menu-icon"><i class="bx bx-menu"></i></div>
 </nav>
-         <div class="menu-icon" id="menu-icon"><i class="bx bx-menu"></i></div>
+         
     </header>
 
 
@@ -96,7 +97,8 @@
 
   <p>&copy; 2025 BlogTube. All rights reserved.</p>
 </footer>
-<script src="js/script.js"></script>
-</body>
+<!--Javascript-->
+<script src="js/script.js" defer></script>
+
 </body>
 </html>
